# mcp_orcehstratoer

./: download_model.py  ingest.py  llm_config.json  newserver.py  pipeline.py  pyproject.toml  response.txt  runtime.py  server.py
llm_client/: __init__.py  base.py  client.py  exceptions.py  registry.py
llm_client/providers/: __init__.py  huggingface.py  mock.py  ollama.py  openai_compatible.py
main-project (1)/main-project/: Dockerfile  pyproject.toml  test_server.py  validation_agent.py
tools/: __init__.py  anime_api.py  c_drive_analyzer.py  c_drive_cleaner.py  c_drive_deep_analyzer.py  c_drive_full_analyzer.py  c_drive_manager.py  cache_cleaner.py  calculator.py  canva_integration.py  claude_log_reader.py  cleanup_duplicates.ps1  clear_caches.ps1  coingecko_mcp.py  create_excel.py  crypto_dashboard.py  detailed_program_scanner.py  disk_space_analyzer.py  downloads_analyzer.py  dynamic_executor.py  example.py  excel_creator.py  excel_handler.py  file_manager.py  job_scraper.py  llm_tool.py  log_analyzer.py  os_health.py  package_installer.py  paint_automation.py  quote_api.py  quotes_service.py  registry.json  reload_modules.py  safe_cleanup.py  sample_data.xlsx  self_edit.py  shell_exec.py  simple_log_analyzer.py  storage_culprits_report.py  (+7 more)
tools/capabilities/: countries_api.py
tools/tools/: __init__.py  c_drive_manager.py  sales_data.csv  web_tools_mcp.py
